--- a/django_app/main/templates/main/home.html
+++ b/django_app/main/templates/main/home.html
@@ -1,9 +1,35 @@
 {% extends "main/base.html" %}
 {% block content %}
-    {% for post in posts %}
-        <h1>{{ post.title }}</h1>
-        <p>By {{ post.author }} on {{ post.date_posted }}</p>
-        <p>{{ post.content }}</p>
-    {% endfor %}
+<div class="container">
+    <div class="columns is-multiline">
+        {% for post in posts %}
+        <div class="column is-full">
+            <div class="card">
+                <header class="card-header">
+                    <span class="card-header-title title is-4">
+                        {{ post.title }}
+                    </span>
+                    <button class="card-header-icon" aria-label="more options">
+                        <span class="icon">
+                            <i class="fas fa-angle-down" aria-hidden="true"></i>
+                        </span>
+                    </button>
+                </header>
+                <div class="card-content">
+                    <div class="content">
+                        {{ post.content }}
+                        <br>
+                        <p>By <b>{{ post.author }}</b> on {{ post.date_posted }}</p>
+                    </div>
+                </div>
+                <footer class="card-footer">
+                    <a href="#" class="card-footer-item">Save</a>
+                    <a href="#" class="card-footer-item">Edit</a>
+                    <a href="#" class="card-footer-item">Delete</a>
+                </footer>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock content %}
-    
