UPDATE: add Post database and user auth

--- a/django_app/main/templates/main/home.html
+++ b/django_app/main/templates/main/home.html
@@ -19,13 +19,12 @@
                     <div class="content">
                         {{ post.content }}
                         <br>
-                        <p>By <b>{{ post.author }}</b> on {{ post.date_posted }}</p>
+                        <p>By <b>{{ post.author }}</b> on {{ post.date_posted|date:"d F Y" }}</p>
                     </div>
                 </div>
                 <footer class="card-footer">
+                    <a href="#" class="card-footer-item">Read More</a>
                     <a href="#" class="card-footer-item">Save</a>
-                    <a href="#" class="card-footer-item">Edit</a>
-                    <a href="#" class="card-footer-item">Delete</a>
                 </footer>
             </div>
         </div>
